---
version: trunk
todo: 
  - prettify legend
  - different notations in compactify
  - yacpdb communication: check, add, sync down, sync up
  - Import: .cvv? .pgn?
  - yacpdb bug: not escaping >| etc when dumping YAML
  - icons on model dialogs
changes:
  - file -> save template
  - import pbm: ask encoding
  - bug fixed: non-ascii filenames
---
version: 0.12.2.3b
changes:
  - icon issues for Windows 7
  - Diagram borders in PDF
  - bug fixed: legacy.chess.Move.disambuguate() was never called in certain cases
    resulting in incorrect compact output
---
version: 0.12.2.2b
changes:
  - about screen changed
  - alternating backgrounds in overview
  - exit handler (unsaved changes, windows geometry etc)
  - Twins dialog context menu changed
  - PDF export
  - Clearing popeye output on model index change
  - Confirm entry deletion
  - Export to image
  - Compactifying popeye output + lots of bugs fixed in legacy (yacpdb) code
  - PBM import: partially fixed (still fails on some pbm files, e.g. from albums.zip)
  - bug fixed: metadata tab
  - bug fixed: Unicode in non unicode fields (twins, stipulation etc)
---
version: 0.12.2b
changes:
  - Basic functionality 